--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,8 @@
 [supervisord]
 nodaemon=true
 [program:scheduler]
-command=airflow scheduler stdout_logfile=/var/log/supervisor/%(program_name)s.log
+command=airflow scheduler
+stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
