--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -12,6 +12,10 @@ services:
         image: airflow
         restart: always
         user: root
+        
+        
+        logging:
+            driver: fluentd
         depends_on:
             - postgres
         environment:
